turtleart.lessons.turtleart.Main.HouseThree.scala.error
Source:23: error: not found: value poseCrayon
poseCrayon()
^